<resources>
    <string name="app_name">cta_youtube_usability_app</string>
    <string name="landscape_text">横向き</string>
    <string name="portrait_text">縦向き</string>
    <string name="right_handed">右利き</string>
    <string name="left_handed">左利き</string>
    <string name="youtube_layout">YouTubeレイアウト</string>
    <string name="title_layout_setting">レイアウト設定</string>
    <string name="title_movie">動画</string>
    <string name="error_text">エラーが発生しました</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
