<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/landscape_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/landscape_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/landscape_radio_button"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/landscape_radio_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/portrait_text"
        app:layout_constraintTop_toBottomOf="@id/landscape_text">

        <RadioButton
            android:id="@+id/option_landscape_youtube_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/youtube_layout" />

        <RadioButton
            android:id="@+id/option_landscape_right_hand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/right_handed" />

        <RadioButton
            android:id="@+id/option_landscape_left_hand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/left_handed" />

    </RadioGroup>

    <TextView
        android:id="@+id/portrait_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/portrait_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/landscape_radio_button" />

    <RadioGroup
        android:id="@+id/portrait_radio_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/portrait_text">

        <RadioButton
            android:id="@+id/option_portrait_youtube_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/youtube_layout" />

        <RadioButton
            android:id="@+id/option_portrait_right_hand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/right_handed" />

        <RadioButton
            android:id="@+id/option_portrait_left_hand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/left_handed" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>